--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,32 @@ body {
     max-width: 1440px;
     position: relative;
 }
+
+/* MyComponent.css or your global styles */
+.custom-scrollbar {
+    /* width, height, and other styles for your container */
+    overflow: auto;
+}
+
+/* Webkit (Chrome, Safari, Edge) scrollbar styles */
+.custom-scrollbar::-webkit-scrollbar {
+    width: 12px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #4caf50;
+    /* Color of the thumb */
+    border-radius: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    /* Color of the track */
+}
+
+/* Firefox scrollbar styles */
+.custom-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: #4caf50 #f1f1f1;
+    /* thumb and track colors */
+}
